--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -1,3 +1,15 @@
 {
-  "name": "hardhat-project"
+  "name": "contract",
+  "scripts": {
+    "deploy:local": "npx hardhat run scripts/deploy.ts --network localhost",
+    "deploy:goerli": "npx hardhat run scripts/deploy.ts --network goerli"
+  },
+  "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^2.0.1",
+    "dotenv": "^16.0.3",
+    "hardhat": "^2.12.6"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.8.1"
+  }
 }
