--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -15,11 +15,13 @@
     "@types/react-dom": "18.0.10",
     "@web3modal/ethereum": "^2.0.0",
     "@web3modal/react": "^2.0.0",
+    "axios": "^1.2.6",
     "daisyui": "^2.49.0",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "ethers": "^5.7.2",
     "ipfs-http-client": "^60.0.0",
+    "lodash": "^4.17.21",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -28,6 +30,7 @@
     "wagmi": "^0.11.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.191",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
