--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -22,7 +22,9 @@
     "ethers": "^5.7.2",
     "ipfs-http-client": "^60.0.0",
     "lodash": "^4.17.21",
+    "lokijs": "^1.5.12",
     "next": "13.1.6",
+    "pino-pretty": "^9.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.42.1",
