update resell function

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -20,11 +20,13 @@
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "ethers": "^5.7.2",
+    "form-data": "^4.0.0",
     "ipfs-http-client": "^60.0.0",
     "lodash": "^4.17.21",
     "lokijs": "^1.5.12",
     "next": "13.1.6",
     "pino-pretty": "^9.1.1",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.42.1",
